# RMA-Camera-FA-Report-generator

./: .gitignore  README.md  adv_classification.py  categories.json  csv_to_mysql.py  failure_form_gui.py  gui.py  main.py  pyproject.toml  report_rules.json  requirements.txt  test.py
FA report/: 3.1G component.csv  customer_request_templates.json  failure_form_gui.py  report_rules.json
advanced FA report/: app.py  bridger.py  camh_classification_fallback.py  failure_form_gui_db.py  init_db.py  migrate_report_rules_to_db.py  report_rules.json
fa_report/: app.py  bridger.py  db_config.py  image_classifier.py  init_db.py  report_rules.json  user_settings.json
